k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bullfinch-api
  namespace: bullfinch
spec:
  selector:
    app: bullfinch-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
